# Moonshine

./: LICENSE  README.md  __init__.py  __main__.py  app.py  cli.py  config.py  credentials.py  defaults.py  input.md  json_schema.py  main.py  moonshine_constants.py  moonshine_state.py  providers.py  pyproject.toml  run_agent.py  runtime_provider.py  setup.py  utils.py
Moonshine/: README.md  agent.py  app.py  batch_runner.py  config_legacy.py  markdown_metadata.py  model_tools.py  moonshine_constants.py  moonshine_state.py  providers.py  repl.py  run_agent.py  setup.py  structured_tasks.py  utils.py
Neural Jacobian Conjecture/: nn-functions-Jacobian-theorem.md
agent_runtime/: __init__.py  auto_extract.py  context_manager.py  display.py  extraction.py  memory_manager.py  memory_provider.py  memory_schemas.py  prompt_builder.py  research_index.py  research_log.py  research_mode.py  research_workflow.py
agents/: manager.py
gateway/: __init__.py  run.py
moonshine_cli/: commands.py  config.py  main.py  runtime_provider.py
skills/: __init__.py  manager.py  skill_document.py  skill_manage.py  template.py
storage/: dynamic_memory_store.py  knowledge_store.py  session_store.py  skill_store.py
tests/: __init__.py  test_architecture.py  test_commands.py  test_commands_refactored.py  test_memory_system.py
tools/: catalog_tools.py  file_tools.py  knowledge_tools.py  manager.py  mcp_bridge.py  memory_tools.py  path_utils.py  python_tools.py  registry.py  research_tools.py  session_tools.py  verification_tools.py
神经网络版本的Jacobian猜想/: 神经网络版本的Jacobian猜想研究报告.md  (+1 more)
(+137 files in other folders)
