[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moonshine"
version = "0.1.0"
description = "Linux-first math research agent harness with traceable storage"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "tiktoken>=0.7.0",
    "lancedb>=0.14.0",
    "chromadb>=0.5.0",
    "langgraph>=0.2.0",
]

[project.optional-dependencies]
tokenizer = ["tiktoken>=0.7.0"]
lancedb = ["lancedb>=0.14.0"]
chromadb = ["chromadb>=0.5.0"]
vector = ["lancedb>=0.14.0", "chromadb>=0.5.0"]
workflow = ["langgraph>=0.2.0"]
all = ["tiktoken>=0.7.0", "lancedb>=0.14.0", "chromadb>=0.5.0", "langgraph>=0.2.0"]

[project.scripts]
moonshine = "moonshine.cli:main"

[tool.setuptools]
packages = [
    "moonshine",
    "moonshine.agents",
    "moonshine.agent_runtime",
    "moonshine.gateway",
    "moonshine.moonshine_cli",
    "moonshine.skills",
    "moonshine.storage",
    "moonshine.tests",
    "moonshine.tools",
]
include-package-data = true

[tool.setuptools.package-dir]
moonshine = "."

[tool.setuptools.package-data]
moonshine = [
    "README.md",
    "assets/**/*",
    "memory/**/*",
    "projects/**/*",
]
